kubernetes/step4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallon
  template:
    metadata:
      labels:
        app: wallon
    spec:
      containers:
        - name: wallon
          image: hashicorp/http-echo
          args:
            - "-text=Hello from /hello-wallon"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: wallon-service
spec:
  selector:
    app: wallon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
